new chat functionality done

--- a/src/components/NewChat/newChatForm.scss
+++ b/src/components/NewChat/newChatForm.scss
@@ -46,4 +46,9 @@ $fontPoppins: 'Poppins';
       font-weight: bold;
     }
   }
+  .errMsg {
+    color: red;
+    font-size: 0.7em;
+    font-family: $fontMontserrat;
+  }
 }
