create new chat redux done

--- a/src/components/Sidebar/sideBar.scss
+++ b/src/components/Sidebar/sideBar.scss
@@ -79,6 +79,7 @@ $fontPoppins: 'Poppins';
         font-weight: bold;
         font-size: 1em;
         line-height: 1.2em;
+        word-break: break-word;
         // letter-spacing: 1px;
       }
       .friendMsg {
